fixed layout overflow error (some css)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,17 @@
 html{
   scroll-behavior:smooth;
 }
-
+.scale-in{
+  animation: scaleIn 0.5s ease-out forwards;
+}
+@keyframes scaleIn{
+  0% {
+    transform: scale(0.9);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
 .scroll-fade{
   animation: fade-in 1s ease-out forwards;
   animation-timeline: view();
@@ -112,15 +122,7 @@ nav{
   --sidebar-border: oklch(0.92 0.004 286.32);
   --sidebar-ring: oklch(0.705 0.015 286.067);
 }
-  @keyframes shimmer {
-    0% { background-position: 0% 50%; }
-    50% { background-position: 100% 50%; }
-    100% { background-position: 0% 50%; }
-  }
-.why{
-  background: radial-gradient(ellipse at center, #ff7e5f, #feb47b);
 
-}
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -205,6 +207,13 @@ nav{
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground;
+    padding: 0;
+    width: 100%;
+    height: full;
+    overflow-x: hidden;
   }
+}
+*{
+  /* outline: 1px solid red; */
+  box-sizing: border-box;
 }
